@@ -19,3 +19,5 @@
 -XX:+UnlockDiagnosticVMOptions
 # https://bugs.openjdk.org/browse/JDK-8329528
 -XX:G1NumCollectionsKeepPinned=10000000
+# https://bugs.openjdk.org/browse/JDK-8327134
+-Djava.security.manager=allow
